app/scss/app.scss
html {
    position: relative;
    min-height: 100%;
}

body {
    padding-top: 80px;
    margin-bottom: 80px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
    font-size: 15px;
    color: #404040;
}

h1, h2, h3, h4, h5, h6 {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
}

code, a > code {
    color: #A93552;
    background-color: #f5f5f5;
    border-radius: 0;
}

pre {
    border: none;
    padding: 0;
    margin: 15px 0;
    > code {
        padding: 20px 15px !important;
        display: block;
        /* HighlightJS theme shim to avoid flashing when the page is loaded */
        color: #dcdcdc;
        background-color: #3f3f3f;
    }
}

p {
    margin: 0 0 15px;
}

.dropdown-menu > li > a {
    white-space: normal;
}

.parameter > *:first-child {
    float: left;
    margin: 0 .5em 0 0;
}

.parameter > .param-desc {
    overflow: hidden;
}

h2[id]:before, h3[id]:before {
    content: "";
    display: block;
    padding-top: 60px;
    margin-top: -60px;
}

//reporting api listing styles
.apiDescription, .apiMethod {
    margin: 0 0 10px;
}

.apiDescription ul {
    margin: 10px 0;
}

.apiMethod .example {
    margin-left: 5px;
    color: $grey;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    background-color: #f7f7f7;
    padding: 20px;
    border-top: 1px solid #dfdfdf;
    font-size: 14px;
}

//Menu navbar
nav {
    .navbar-brand {
        display: flex;
        svg {
            align-self: center;
        }
    }
}

//Home page
.jumbotron {
    padding-top: 48px;
    padding-bottom: 48px;
    margin-top: -40px;
    margin-bottom: 0;
}

.jumbotron-categories {
    background: #0F3D57;
    padding: 50px 0;
    color: white;
    text-align: center;
    margin-bottom: 30px;
}

.jumbotron-categories h2 {
    font-size: 62px;
    line-height: 78px;
}

.jumbotron-categories p {
    font-weight: 300;
    font-size: 17px;
}

.jumbotron-categories li a {
    color: #91aabf;
}

